--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ fabric.properties
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 Generated/
+TylerQuickMediaTests/GeneratedMocks.swift
 ## Build generated
 build/
 DerivedData/
